containers/kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: nrocinu
spec:
    selector:
        app: frontend
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: http
